tests/paczka1/small_fuzzy/15995593.err
Error in line 5: kpN A10 -1,8
Error in line 14: mJXUi S95 T3,9
